[gd_scene load_steps=2 format=3 uid="uid://cs0rjjekejkpv"]

[ext_resource type="Script" path="res://main_menu/new_game_menu.gd" id="1_sjmie"]

[node name="NewGameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sjmie")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.66
anchor_top = 0.5
anchor_right = 0.66
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="TriviaOptionButton" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2

[node name="ModeOptionButton" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "Random"
popup/item_0/id = 0
popup/item_1/text = "Debug"
popup/item_1/id = 1
popup/item_2/text = "Just One"
popup/item_2/id = 2

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 87.0
offset_top = 67.0
offset_right = 183.0
offset_bottom = 157.0

[node name="L" type="Label" parent="VBoxContainer2"]
layout_mode = 2
text = "Trivia set:"
horizontal_alignment = 2

[node name="L2" type="Label" parent="VBoxContainer2"]
layout_mode = 2
text = "Trivia Mode:"
horizontal_alignment = 2

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
